# network-manager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  com.chrisdaggas.network-manager.yml
data/: com.chrisdaggas.network-manager.desktop  com.chrisdaggas.network-manager.gresource.xml  com.chrisdaggas.network-manager.metainfo.xml  style.css
data/dbus-1/: com.chrisdaggas.NetworkManagerd.conf  com.chrisdaggas.NetworkManagerd.service
data/polkit/: com.chrisdaggas.network-manager.policy
data/resources/: style.css
data/systemd/: cd-network-managerd.service
packaging/: build-packages.sh
packaging/appimage/: AppImageBuilder.yml  build.sh  com.chrisdaggas.network-manager.desktop
packaging/deb/debian/: cd-network-manager-daemon.postinst  cd-network-manager-daemon.prerm  changelog  control  copyright  rules
packaging/rpm/: network-manager.spec
po/: LINGUAS  POTFILES.in  ar.po  cd-network-manager.pot  de.po  el.po  es.po  fr.po  hi.po  it.po  pt.po  ru.po  zh.po
scripts/: clean.sh  doctor.sh  lint.sh  package-appimage.sh  package-deb.sh  package-rpm.sh  release-build.sh
src/: application.rs  autostart.rs  dbus_client.rs  main.rs  network_utils.rs  scheduler.rs  storage.rs  tray.rs  version_check.rs
src/models/: adapter.rs  config.rs  error.rs  mod.rs  profile.rs  result.rs  rules.rs  schema.rs  templates.rs  validation.rs
src/models/actions/: automation.rs  mod.rs  network.rs  system.rs
src/services/: autoswitch.rs  encryption.rs  mod.rs  sandbox.rs  watchdog.rs
src/ui/: main_window.rs  mod.rs
src/ui/pages/: dashboard_page.rs  help_page.rs  logs_page.rs  mod.rs  profiles_page.rs  settings_page.rs
src/ui/widgets/: mod.rs  network_card.rs  profile_row.rs  status_pill.rs
