[package]
name = "network-manager"
version = "1.4.0"
edition = "2021"
authors = ["Christos A. Daggas <info@chrisdaggas.com>"]
description = "GTK4/libadwaita network and system profile manager for Linux"
license = "MIT"
repository = "https://github.com/christosdaggas/network-manager"
homepage = "https://chrisdaggas.com"
keywords = ["network", "manager", "gtk", "gnome", "linux"]
categories = ["gui", "network-programming", "config"]

[dependencies]
# GTK4 and Libadwaita
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }

# GLib/GIO
glib = "0.20"
gio = "0.20"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# D-Bus
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for profile IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Config directories (XDG)
dirs = "5"

# Regex for rule parsing
regex = "1"

# Error handling
thiserror = "1"

# Lazy initialization
once_cell = "1"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# Schema versioning
semver = { version = "1", features = ["serde"] }

# HTTP client for update checks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Internationalization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[features]
default = []
gresource = []

[build-dependencies]
glib-build-tools = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.deb]
maintainer = "Christos A. Daggas <info@chrisdaggas.com>"
copyright = "2026, Christos A. Daggas"
license-file = ["LICENSE", "4"]
extended-description = """\
GTK4/libadwaita network and system profile manager for Linux. \
Create and switch between network profiles with different configurations."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/network-manager", "usr/bin/", "755"],
    ["data/com.chrisdaggas.network-manager.desktop", "usr/share/applications/", "644"],
    ["data/icons/hicolor/scalable/apps/com.chrisdaggas.network-manager.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/icons/hicolor/symbolic/apps/com.chrisdaggas.network-manager-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/", "644"],
    ["data/com.chrisdaggas.network-manager.metainfo.xml", "usr/share/metainfo/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/network-manager", dest = "/usr/bin/network-manager", mode = "755" },
    { source = "data/com.chrisdaggas.network-manager.desktop", dest = "/usr/share/applications/com.chrisdaggas.network-manager.desktop", mode = "644" },
    { source = "data/icons/hicolor/scalable/apps/com.chrisdaggas.network-manager.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.chrisdaggas.network-manager.svg", mode = "644" },
    { source = "data/icons/hicolor/symbolic/apps/com.chrisdaggas.network-manager-symbolic.svg", dest = "/usr/share/icons/hicolor/symbolic/apps/com.chrisdaggas.network-manager-symbolic.svg", mode = "644" },
    { source = "data/com.chrisdaggas.network-manager.metainfo.xml", dest = "/usr/share/metainfo/com.chrisdaggas.network-manager.metainfo.xml", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/network-manager/LICENSE", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14"
libadwaita = ">= 1.5"
NetworkManager = ">= 1.0"

[package.metadata.generate-rpm.recommends]
bubblewrap = ">= 0.5"
